--- a/VAERS-v1.ipynb
+++ b/VAERS-v1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/gitgubbenito/capstone/blob/main/VAERS-v1.ipynb",
-      "authorship_tag": "ABX9TyOGOo9PBsvMqcc31K86dllB",
+      "authorship_tag": "ABX9TyNzlT2bRHnInX0GNcL3XkTY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -125,7 +125,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# load 2021YMPTOMS.csv\n",
+        "# load data sets.csv\n",
         "df_symptoms_2021 =pd.read_csv('/content/drive/MyDrive/capstone/2021VAERSSYMPTOMS.csv')\n",
         "df_vaers_data_2021 = pd.read_csv('/content/drive/MyDrive/capstone/2021VAERSDATA.csv',encoding=\"Windows-1252\")\n",
         "df_vaers_vax_2021 = pd.read_csv('/content/drive/MyDrive/capstone/2021VAERSVAX.csv',encoding=\"Windows-1252\")\n",
@@ -163,12 +163,12 @@
       ],
       "metadata": {
         "id": "FhwX7WueePyH",
-        "outputId": "06315f17-17fe-458b-e5f9-39ea045b2d95",
+        "outputId": "5ff12204-e846-4a9e-fb3b-6875b7b8e315",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -209,16 +209,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l-0WrPd86CxW",
-        "outputId": "a63b899d-0347-456c-af2d-40daebdf1b01"
+        "outputId": "e8854ee2-41ff-4432-80bf-2554b346d020"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "df_symptoms_2021 has 33.53% null values\n",
-            "df_vaers_data_2021 has 53.53% null values\n",
+            "df_vaers_data_2021 has 54.45% null values\n",
             "df_vaers_vax_2021 has 10.34% null values\n"
           ]
         }
@@ -238,16 +238,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YVQMrYA27HFH",
-        "outputId": "f8f9825b-4871-46dc-92aa-504a311ece54"
+        "outputId": "9d2518a0-4907-44dc-81ac-34dbd8c060f9"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "df_symptoms_2021 has 1003896 rows and 11 columns\n",
-            "df_vaers_data_2021 has 247773 rows and 35 columns\n",
+            "df_vaers_data_2021 has 753006 rows and 35 columns\n",
             "df_vaers_vax_2021 has 797081 rows and 8 columns\n"
           ]
         }
@@ -263,9 +263,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u3pBa-QP6tOI",
-        "outputId": "c3f9179c-78c1-4934-da19-14ee5250b276"
+        "outputId": "5e290dcb-5ffb-4c78-aad4-4af0ec224161"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -283,7 +283,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 12
         }
       ]
     },
@@ -297,9 +297,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gNCle-NrWOgF",
-        "outputId": "1e8609c4-84ba-4d92-fb75-518e8ce9e370"
+        "outputId": "498c872d-4a5b-4de4-ed13-ab7708c432b2"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -334,46 +334,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QoaXAptJ5o6n",
-        "outputId": "28da0a8e-ddc6-4ed7-a1d0-60293de1e2fa"
+        "outputId": "8f338181-8f86-49b7-db1e-6401bb907470"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 797081 entries, 0 to 797080\n",
-            "Data columns (total 8 columns):\n",
-            " #   Column           Non-Null Count   Dtype \n",
-            "---  ------           --------------   ----- \n",
-            " 0   VAERS_ID         797081 non-null  int64 \n",
-            " 1   VAX_TYPE         797081 non-null  object\n",
-            " 2   VAX_MANU         797081 non-null  object\n",
-            " 3   VAX_LOT          552156 non-null  object\n",
-            " 4   VAX_DOSE_SERIES  792912 non-null  object\n",
-            " 5   VAX_ROUTE        606932 non-null  object\n",
-            " 6   VAX_SITE         576935 non-null  object\n",
-            " 7   VAX_NAME         797081 non-null  object\n",
-            "dtypes: int64(1), object(7)\n",
-            "memory usage: 48.7+ MB\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df_vaers_vax_2021.info()"
-      ],
-      "metadata": {
-        "id": "ha-wc7JI53UA",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "ddb35237-b1c6-45b1-f880-419774ae4621"
-      },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -410,9 +373,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FvsVIHMMwTFL",
-        "outputId": "e9fce089-9e9b-4934-a0db-df2fbc3bfb64"
+        "outputId": "662ff54b-219f-4e6b-cdec-1ac2e1bb616c"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -447,7 +410,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 15
         }
       ]
     },
@@ -456,20 +419,19 @@
       "source": [
         "# prompt: merge all 3 data frame\n",
         "\n",
-        "import pandas as pd\n",
         "df_combine_2021 = pd.merge(df_vaers_data_2021, df_vaers_vax_2021, on='VAERS_ID', how='inner')\n",
         "df_combine_2021 = pd.merge(df_combine_2021, df_symptoms_2021, on='VAERS_ID', how='inner')\n"
       ],
       "metadata": {
         "id": "h22Y70aDBrax"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# prompt: how many people die by vacine manu order from count\n",
+        "# prompt: how many people die by vacine manu order by count\n",
         "\n",
         "df_combine_2021.groupby('VAX_MANU')['DIED'].value_counts().sort_values(ascending=False)\n"
       ],
@@ -478,31 +440,33 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qusGqSgLxDrp",
-        "outputId": "7615772c-1ea5-46e2-f4b2-082c2527ae9a"
+        "outputId": "a0767568-77a2-4bc5-c453-0d68b3ad4800"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "VAX_MANU                           DIED\n",
-              "MODERNA                            Y       2136\n",
-              "PFIZER\\BIONTECH                    Y       2090\n",
-              "JANSSEN                            Y        117\n",
-              "UNKNOWN MANUFACTURER               Y        111\n",
-              "GLAXOSMITHKLINE BIOLOGICALS        Y         20\n",
-              "MERCK & CO. INC.                   Y         20\n",
-              "SANOFI PASTEUR                     Y         19\n",
-              "PFIZER\\WYETH                       Y          8\n",
+              "PFIZER\\BIONTECH                    Y       9646\n",
+              "MODERNA                            Y       8160\n",
+              "JANSSEN                            Y       1901\n",
+              "UNKNOWN MANUFACTURER               Y        374\n",
+              "MERCK & CO. INC.                   Y         92\n",
+              "GLAXOSMITHKLINE BIOLOGICALS        Y         78\n",
+              "SANOFI PASTEUR                     Y         77\n",
+              "PFIZER\\WYETH                       Y         39\n",
+              "SEQIRUS, INC.                      Y         14\n",
               "PROTEIN SCIENCES CORPORATION       Y          4\n",
-              "DYNAVAX TECHNOLOGIES CORPORATION   Y          1\n",
-              "NOVARTIS VACCINES AND DIAGNOSTICS  Y          1\n",
+              "NOVARTIS VACCINES AND DIAGNOSTICS  Y          3\n",
+              "DYNAVAX TECHNOLOGIES CORPORATION   Y          2\n",
+              "PAXVAX                             Y          2\n",
               "Name: count, dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 17
         }
       ]
     },
