--- a/VAERS-v2.5.ipynb
+++ b/VAERS-v2.5.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "mount_file_id": "https://github.com/gitgubbenito/capstone/blob/main/VAERS-v2.4.ipynb",
       "authorship_tag": "ABX9TyPWH6YjLBgYwgtge09kqmEF",
       "include_colab_link": true
@@ -253,12 +254,12 @@
         "df_vaers_vax_2021.head()"
       ],
       "metadata": {
-        "id": "oGNru7TB-n1_",
-        "outputId": "1ceb55b1-2967-42df-c9c3-8b0644645977",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "oGNru7TB-n1_",
+        "outputId": "1ceb55b1-2967-42df-c9c3-8b0644645977"
       },
       "execution_count": 8,
       "outputs": [
@@ -646,12 +647,12 @@
         "df_vaers_data_2021.head()"
       ],
       "metadata": {
-        "id": "L9vJ1yCgHydM",
-        "outputId": "1df99dd4-7025-440c-bfae-9ed9923f2aa9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 550
-        }
+        },
+        "id": "L9vJ1yCgHydM",
+        "outputId": "1df99dd4-7025-440c-bfae-9ed9923f2aa9"
       },
       "execution_count": 13,
       "outputs": [
@@ -1399,12 +1400,12 @@
         "df_combine_2021.head()"
       ],
       "metadata": {
-        "id": "Kd3sUZvdWXF5",
-        "outputId": "ceecd6ea-ba0d-496e-fc02-2d31aa8cdeaa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 533
-        }
+        },
+        "id": "Kd3sUZvdWXF5",
+        "outputId": "ceecd6ea-ba0d-496e-fc02-2d31aa8cdeaa"
       },
       "execution_count": 27,
       "outputs": [
@@ -2634,12 +2635,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "_educ7XxSC40",
-        "outputId": "d09ccf1a-d90b-47cb-a7c7-466277adf3ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 649
-        }
+        },
+        "id": "_educ7XxSC40",
+        "outputId": "d09ccf1a-d90b-47cb-a7c7-466277adf3ce"
       },
       "execution_count": 37,
       "outputs": [
@@ -4722,11 +4723,11 @@
         "print(grouped_data)\n"
       ],
       "metadata": {
-        "id": "TI-cTFokeGxl",
-        "outputId": "3125e0b0-1c84-4900-99af-4f1b2de64ba8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TI-cTFokeGxl",
+        "outputId": "3125e0b0-1c84-4900-99af-4f1b2de64ba8"
       },
       "execution_count": 73,
       "outputs": [
