--- a/VAERS-v2.5.ipynb
+++ b/VAERS-v2.5.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/gitgubbenito/capstone/blob/main/VAERS-v2.5.ipynb",
-      "authorship_tag": "ABX9TyNNiCRnLj8BAWk+ygsjk0k5",
+      "authorship_tag": "ABX9TyO2+gKxunz8GiUOpYizq1r7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,6 +39,26 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "%reset -f"
+      ],
+      "metadata": {
+        "id": "fd6bUe9vu5FU"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "F8zBASJ2_QzZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "Data files can be found at the following location:\n",
@@ -55,36 +75,107 @@
     {
       "cell_type": "code",
       "source": [
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "import plotly.express as px\n",
-        "import plotly.graph_objects as go\n",
-        "import matplotlib.patches as mpatches\n",
-        "from plotly.subplots import make_subplots\n",
+        "from datetime import date\n",
+        "\n",
+        "import random\n",
+        "import statistics\n",
+        "from scipy import stats\n",
+        "from statsmodels.stats import weightstats as stests\n",
+        "from scipy.stats import shapiro\n",
+        "from statsmodels.stats import power\n",
+        "from category_encoders import TargetEncoder, OneHotEncoder\n",
+        "\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn import metrics\n",
+        "from sklearn.metrics import log_loss, confusion_matrix, classification_report, cohen_kappa_score, accuracy_score, f1_score, roc_curve, roc_auc_score\n",
+        "\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.naive_bayes import GaussianNB, MultinomialNB\n",
+        "\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn import tree\n",
+        "import pydotplus\n",
+        "\n",
+        "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier, AdaBoostClassifier, StackingClassifier\n",
+        "from xgboost import XGBClassifier\n",
+        "\n",
+        "from sklearn.feature_selection import RFE\n",
+        "\n",
+        "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+        "from sklearn.model_selection import GridSearchCV, train_test_split, KFold, StratifiedKFold, cross_val_score\n",
+        "\n",
+        "# to suppress warnings\n",
+        "from warnings import filterwarnings\n",
+        "filterwarnings('ignore')\n",
+        "\n",
+        "# display all columns of the dataframe\n",
+        "pd.options.display.max_columns = None\n",
+        "\n",
+        "# display all rows of the dataframe\n",
+        "pd.options.display.max_rows = None\n",
+        "\n",
+        "# to display the float values upto 6 decimal places\n",
+        "pd.options.display.float_format = '{:.6f}'.format\n",
+        "\n",
+        "from sklearn.utils import resample\n",
+        "\n",
         "from wordcloud import WordCloud\n",
-        "import seaborn as sns\n",
-        "sns.set(color_codes = True)\n",
-        "sns.set(style=\"whitegrid\")\n",
-        "import plotly.figure_factory as ff\n",
-        "from plotly.colors import n_colors"
+        "from wordcloud import STOPWORDS\n",
+        "\n",
+        "import nltk\n",
+        "import re\n",
+        "from sklearn.feature_extraction.text import TfidfTransformer\n",
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "from sklearn.feature_extraction.text import CountVectorizer\n",
+        "from sklearn.manifold import TSNE\n",
+        "from nltk.stem.porter import PorterStemmer"
       ],
       "metadata": {
         "id": "V5aZWklDMd7S"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#pip install chardet"
+        "#!pip install chardet\n",
+        "#!pip install category_encoders"
       ],
       "metadata": {
-        "id": "VnkB6stflJnj"
+        "id": "VnkB6stflJnj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0710d75b-9f70-46df-e06c-ae5f3ff779d8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting category_encoders\n",
+            "  Downloading category_encoders-2.6.3-py2.py3-none-any.whl (81 kB)\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/81.9 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m30.7/81.9 kB\u001b[0m \u001b[31m640.4 kB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m41.0/81.9 kB\u001b[0m \u001b[31m763.8 kB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m81.9/81.9 kB\u001b[0m \u001b[31m867.9 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: numpy>=1.14.0 in /usr/local/lib/python3.10/dist-packages (from category_encoders) (1.25.2)\n",
+            "Requirement already satisfied: scikit-learn>=0.20.0 in /usr/local/lib/python3.10/dist-packages (from category_encoders) (1.2.2)\n",
+            "Requirement already satisfied: scipy>=1.0.0 in /usr/local/lib/python3.10/dist-packages (from category_encoders) (1.11.4)\n",
+            "Requirement already satisfied: statsmodels>=0.9.0 in /usr/local/lib/python3.10/dist-packages (from category_encoders) (0.14.2)\n",
+            "Requirement already satisfied: pandas>=1.0.5 in /usr/local/lib/python3.10/dist-packages (from category_encoders) (2.0.3)\n",
+            "Requirement already satisfied: patsy>=0.5.1 in /usr/local/lib/python3.10/dist-packages (from category_encoders) (0.5.6)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.10/dist-packages (from pandas>=1.0.5->category_encoders) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas>=1.0.5->category_encoders) (2023.4)\n",
+            "Requirement already satisfied: tzdata>=2022.1 in /usr/local/lib/python3.10/dist-packages (from pandas>=1.0.5->category_encoders) (2024.1)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.10/dist-packages (from patsy>=0.5.1->category_encoders) (1.16.0)\n",
+            "Requirement already satisfied: joblib>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from scikit-learn>=0.20.0->category_encoders) (1.4.2)\n",
+            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn>=0.20.0->category_encoders) (3.5.0)\n",
+            "Requirement already satisfied: packaging>=21.3 in /usr/local/lib/python3.10/dist-packages (from statsmodels>=0.9.0->category_encoders) (24.1)\n",
+            "Installing collected packages: category_encoders\n",
+            "Successfully installed category_encoders-2.6.3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -171,23 +262,10 @@
         "df_vaers_vax_2021 = pd.read_csv('/content/drive/MyDrive/capstone/2021VAERSVAX.csv',encoding=\"Windows-1252\")\n"
       ],
       "metadata": {
-        "id": "igTMmUkr0TMU",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "68f87b31-0e18-40fd-cc90-6344b549978b"
+        "id": "igTMmUkr0TMU"
       },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-7-8b19012f9fec>:3: DtypeWarning: Columns (7,12,15,23) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-            "  df_vaers_data_2021 = pd.read_csv('/content/drive/MyDrive/capstone/2021VAERSDATA.csv',encoding=\"Windows-1252\")\n"
-          ]
-        }
-      ]
+      "execution_count": 9,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -241,7 +319,7 @@
       "metadata": {
         "id": "JS2tUc9OJJCe"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -282,7 +360,7 @@
         "outputId": "55c9a6f5-2c52-4a54-c48b-65a01b1e5241",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 213
+          "height": 267
         }
       },
       "execution_count": 11,
@@ -2112,11 +2190,11 @@
         "df_combine_2021.shape"
       ],
       "metadata": {
-        "id": "3K07VFSu5m4b",
-        "outputId": "fd21ea45-3678-4443-d930-9454f6e96ecf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3K07VFSu5m4b",
+        "outputId": "fd21ea45-3678-4443-d930-9454f6e96ecf"
       },
       "execution_count": 38,
       "outputs": [
@@ -2892,7 +2970,7 @@
         "outputId": "d64fddd3-00e1-4437-cbbd-cbd1785c85cb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 729
+          "height": 526
         }
       },
       "execution_count": 48,
@@ -3776,7 +3854,7 @@
         "outputId": "26974731-19b6-4b55-ad34-38db056990d3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 729
+          "height": 522
         }
       },
       "execution_count": 58,
@@ -3969,11 +4047,11 @@
         "df_combine_2021['VAX_TYPE'].value_counts(normalize= True) * 100"
       ],
       "metadata": {
-        "id": "K2_tSdlbEC1x",
-        "outputId": "ad6045e7-316f-4c41-dce7-a17ac588c582",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "K2_tSdlbEC1x",
+        "outputId": "ad6045e7-316f-4c41-dce7-a17ac588c582"
       },
       "execution_count": 65,
       "outputs": [
@@ -3997,11 +4075,11 @@
         "df_combine_2021['VAX_MANU'].value_counts(normalize= True) * 100"
       ],
       "metadata": {
-        "id": "lNH6WC48EV7Q",
-        "outputId": "15e1e34e-d39f-4ab6-ad37-05fd5558ed95",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lNH6WC48EV7Q",
+        "outputId": "15e1e34e-d39f-4ab6-ad37-05fd5558ed95"
       },
       "execution_count": 66,
       "outputs": [
@@ -4069,11 +4147,11 @@
         "print(\"Categorical columns:\", categorical_cols)\n"
       ],
       "metadata": {
-        "id": "bb7G_SBuJE1P",
-        "outputId": "78895e20-1ac3-4930-f52a-f95e89f50857",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bb7G_SBuJE1P",
+        "outputId": "78895e20-1ac3-4930-f52a-f95e89f50857"
       },
       "execution_count": 68,
       "outputs": [
@@ -4095,11 +4173,11 @@
         "df_combine_2021['ER_VISIT'].value_counts()"
       ],
       "metadata": {
-        "id": "Gcs1TZQbKfnj",
-        "outputId": "7180aab2-cd81-4317-dd87-c3a93c896b4a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Gcs1TZQbKfnj",
+        "outputId": "7180aab2-cd81-4317-dd87-c3a93c896b4a"
       },
       "execution_count": 69,
       "outputs": [
@@ -4187,12 +4265,12 @@
         "\n"
       ],
       "metadata": {
-        "id": "el6QfqwjLL_x",
-        "outputId": "bafce2c0-729e-41dd-a835-f6d8821b1ba2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 214
-        }
+        },
+        "id": "el6QfqwjLL_x",
+        "outputId": "bafce2c0-729e-41dd-a835-f6d8821b1ba2"
       },
       "execution_count": 1,
       "outputs": [
@@ -4380,12 +4458,12 @@
         "print(\"The categorical features are:\\n\\n\",cat)"
       ],
       "metadata": {
-        "id": "KMsTdhzBDB4n",
-        "outputId": "58b6426a-57bc-43b4-fe74-51d400e113e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 214
-        }
+        },
+        "id": "KMsTdhzBDB4n",
+        "outputId": "58b6426a-57bc-43b4-fe74-51d400e113e1"
       },
       "execution_count": 4,
       "outputs": [
@@ -4423,12 +4501,12 @@
         "df_v1.loc[((df_v1['DIED'] == 'Y')), 'ADVERSE_EFFECT'] = 'Died'"
       ],
       "metadata": {
-        "id": "MA64cz0atgQ2",
-        "outputId": "3fcac675-f007-4344-db6e-48b9bcffd9e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 250
-        }
+          "height": 321
+        },
+        "id": "MA64cz0atgQ2",
+        "outputId": "3fcac675-f007-4344-db6e-48b9bcffd9e5"
       },
       "execution_count": 3,
       "outputs": [
@@ -4452,12 +4530,12 @@
         "df_combine_2021.head()"
       ],
       "metadata": {
-        "id": "tntDs3sxEJf1",
-        "outputId": "3763d8bd-c298-4ced-a8be-93fd565eccdd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 161
-        }
+        },
+        "id": "tntDs3sxEJf1",
+        "outputId": "3763d8bd-c298-4ced-a8be-93fd565eccdd"
       },
       "execution_count": 1,
       "outputs": [
